testdata/golden/sema/invalid/compare_arm_implicit_block_value_warn.fmt
fn main(flag: bool) -> int {
    return compare flag {
        true => {
            let one = 1;
            one;
        }
        false => 0;
    };
}
